fix overflow issue

--- a/src/scss/partials/_globals.scss
+++ b/src/scss/partials/_globals.scss
@@ -17,6 +17,7 @@
   html {
     // overflow-x: hidden !important;
     // overflow: auto;
+    overflow-x: hidden;
     font-size: 16px;
   }
   body {
