--- a/src/scss/partials/_mixin.scss
+++ b/src/scss/partials/_mixin.scss
@@ -596,6 +596,9 @@
 // Utility classes
 // ------------------------------------------
 @mixin visible {
+  position: relative;
+  width: 100%;
+  overflow-x: hidden;
   opacity: 1;
   transition: opacity 1s ease-in-out;
 }
